@@ -1,3 +1,15 @@
+2012-11-10  Jason Merrill  <jason@redhat.com>
+
+	* cp-demangle.c (d_unqualified_name): Handle abi tags here.
+	(d_name): Not here.
+
+2012-11-09  Jason Merrill  <jason@redhat.com>
+
+	* cp-demangle.c (d_dump): Handle DEMANGLE_COMPONENT_TAGGED_NAME.
+	(d_make_comp, d_find_pack, d_print_comp): Likewise.
+	(d_abi_tags): New.
+	(d_name): Call it.
+
 2012-07-31  Mike Frysinger  <vapier@gentoo.org>
 
 	* md5.c (md5_finish_ctx): Declare swap_bytes.  Assign SWAP() output
